@@ -3186,6 +3186,23 @@ or download tarballs for
 </p>
     </content>
   </item>
+<item>
+    <date>2008-10-24 23:00</date>
+<title>GStreamer Good 0.10.11 &amp; Bad 0.10.9 stable releases</title>
+<content>
+<p>
+The GStreamer team is thrilled to announce new releases of the Good and Bad Plugins modules in the 0.10 GStreamer stable release series.
+</p>
+<p>
+Check out release notes for
+<a href="&site;/releases/gst-plugins-good/0.10.11.html">gst-plugins-good</a> and
+<a href="&site;/releases/gst-plugins-bad/0.10.9.html">gst-plugins-bad</a>
+or download tarballs for
+<a href="&site;/src/gst-plugins-good/gst-plugins-good-0.10.11.tar.bz2">gst-plugins-good</a> and
+<a href="&site;/src/gst-plugins-bad/gst-plugins-bad-0.10.9.tar.bz2">gst-plugins-bad</a>
+</p>
+    </content>
+  </item>
 
   <item>
     <date>2008-11-03 17:10</date>
